--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>easyJavaDropboxAPI</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -90,4 +90,10 @@ Features
 - change of folder with changeDropboxPath(String newpath)
 - get all feature dropbox api getClient()
 - search a file in your dropbox searchFile(String basePath, String query)</description>
+	<scm>
+		<url>scm:git:git@github.com:ITSStartup/easyJavaDropboxAPI.git</url>
+		<connection>scm:git:git@github.com:ITSStartup/easyJavaDropboxAPI.git</connection>
+		<developerConnection>scm:git:git@github.com:ITSStartup/easyJavaDropboxAPI.git</developerConnection>
+		<tag>refs/heads/mvn-repo</tag>
+	</scm>
 </project>
